Fixed localhost port hosting issue

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -17,7 +17,8 @@
     },
     "InterviewTestBasic": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
